...
            "state": "translated",
            "value": "CPF ou CNPJ"
          }
        }
      }
    },
    "Cadastrar estabelecimento": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Cadastrar estabelecimento"
          }
...
            "state": "translated",
            "value": "Licença"
          }
        }
      }
    },
    "Licenças de código aberto": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Licenças de código aberto"
          }
...
            "state": "translated",
            "value": "Presença"
          }
        }
      }
    },
    "Publicar vaga": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Publicar vaga"
          }
...
            "state": "translated",
            "value": "Registrar saída sem localização"
          }
        }
      }
    },
    "Região Administrativa": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Região Administrativa"
          }
...
            "state": "translated",
            "value": "Repositório"
          }
        }
      }
    },
    "Responsável": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Responsável"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
            "state": "translated",
            "value": "Ainda não há turnos considerados."
          }
        }
      }
    },
    "Ajuda": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Ajuda"
          }
...
            "state": "translated",
            "value": "Fale com o suporte"
          }
        }
      }
    },
    "Fechar": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Fechar"
          }
...
            "state": "translated",
            "value": "Link pendente"
          }
        }
      }
    },
    "Meu perfil": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meu perfil"
          }
...
            "state": "translated",
            "value": "Operador"
          }
        }
      }
    },
    "Perfil do estabelecimento": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Perfil do estabelecimento"
          }
...
